<resources>
    <string name="app_name">Words</string>
    <string name="new_game">New game</string>
    <string name="loading">Loading</string>
    <string name="check">Check words</string>
    <string name="exit">Exit</string>
    <string name="error">Sorry, application fails. Please contact developers</string>
    <string name="new_word">+ new word</string>
    <string name="sample">SAMPLE</string>
</resources>